// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Test Approval Input Components Test CheckboxQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="checkboxtype"
  >
    <div
      class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
      finaloptions="blinded,named"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
        data-shrink="true"
      />
      <div
        class="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu makeStyles-hint-66 makeStyles-truncate-68 MuiInputBase-input MuiInput-input"
          role="button"
          tabindex="0"
        >
          Select
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          style="resize:none;min-width:auto"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.8683007,8.40581224 C17.6869393,8.15513929 17.3462588,8 16.9768872,8 L7.0229403,8 C6.65377846,8.00013957 6.31332217,8.15514488 6.13198429,8.40564066 C5.9506464,8.65613644 5.95653333,8.96329718 6.14739007,9.20946397 L11.1243635,15.6155569 C11.309782,15.8542034 11.6418267,16 11.9999138,16 C12.3580008,16 12.6900455,15.8542034 12.875464,15.6155569 L17.8524374,9.20946397 C18.0433515,8.96340454 18.0494128,8.65632814 17.8683007,8.40581224 Z"
          />
        </svg>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test DateQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="date-picker "
  >
    <div
      class="MuiFormControl-root MuiTextField-root MuiFormControl-marginNormal MuiFormControl-fullWidth"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink="true"
      />
      <div
        class="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedStart"
      >
        <div
          class="MuiInputAdornment-root makeStyles-startIcon-12 MuiInputAdornment-positionStart"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20.2608696,3.625 L18.2173913,3.59 C18.0973294,3.59 18,3.50081229 18,3.38 L18,1.96875 C18,1.48550084 17.6106824,1 17.1304348,1 C16.6501872,1 16.2608696,1.48550084 16.2608696,1.96875 L16.2608696,6 C16.26,7 14.61,7 14.6086957,6 L14.6086957,4.0625 C14.6086957,3.82087542 14.4140368,3.625 14.173913,3.625 L8.95652174,3.59375 C8.83679861,3.59375096 8.73960933,3.49634544 8.73913043,3.375875 L8.73913043,1.84375 C8.73913043,1.36050084 8.34981283,1 7.86956522,1 C7.38931761,1 7,1.36050084 7,1.84375 L7,6 C7,7 5.5,7 5.47826087,6 L5.47826087,4.0625 C5.47826087,3.82087542 5.28360207,3.625 5.04347826,3.625 L3.73913043,3.625 C2.77863522,3.625 2,4.40850169 2,5.375 L2,20.25 C2,21.2164983 2.77863522,22 3.73913043,22 L20.2608696,22 C21.2213648,22 22,21.2164983 22,20.25 L22,5.375 C22,4.40850169 21.2213648,3.625 20.2608696,3.625 Z M19.5789474,20 L4.42105263,20 C4.18851168,20 4,19.810582 4,19.5769231 L4,9.42307692 C4,9.18941799 4.18851168,9 4.42105263,9 L19.5789474,9 C19.8114883,9 20,9.18941799 20,9.42307692 L20,19.5769231 C20,19.810582 19.8114883,20 19.5789474,20 Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart"
          placeholder="DD-MMM-YYYY"
          style="resize:none;min-width:auto;padding-left:31px"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test MultiSelectQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="auto-complete-with-add-option"
  >
    <div
      aria-expanded="false"
      class="MuiAutocomplete-root"
      role="combobox"
      style="resize:vertical"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        >
          <input
            aria-autocomplete="list"
            aria-invalid="false"
            autocapitalize="none"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
            placeholder="Click to answer"
            spellcheck="false"
            type="text"
            value=""
          />
          <div
            class="MuiAutocomplete-endAdornment"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-28 MuiOutlinedInput-notchedOutline"
            style="padding-left:8px"
          >
            <legend
              class="PrivateNotchedOutline-legend-29"
              style="width:0.01px"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test NumberQuestion 1`] = `
LoadedCheerio {
  "0": <input
    class="text-number-wrapper proposal-text-area"
    value=""
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test ProposalTeamQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="autocomplete"
  >
    <div
      class="makeStyles-labelWrapper-45"
    />
    <div
      aria-expanded="false"
      class="a-MuiAutocomplete-root makeStyles-root-32 makeStyles-small-41 a-MuiAutocomplete-fullWidth a-MuiAutocomplete-hasClearIcon"
      role="combobox"
    >
      <div>
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiInputBase-root a-MuiOutlinedInput-root a-MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd a-MuiOutlinedInput-adornedEnd MuiInputBase-marginDense a-MuiOutlinedInput-marginDense"
          >
            <input
              aria-autocomplete="list"
              aria-invalid="false"
              autocapitalize="none"
              autocomplete="off"
              class="MuiInputBase-input a-MuiOutlinedInput-input a-MuiAutocomplete-input a-MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd a-MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense a-MuiOutlinedInput-inputMarginDense"
              spellcheck="false"
              type="text"
              value=""
            />
            <div
              class="a-MuiAutocomplete-endAdornment"
            >
              <button
                aria-label="Clear"
                class="MuiButtonBase-root MuiIconButton-root a-MuiAutocomplete-clearIndicator"
                tabindex="-1"
                title="Clear"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-fontSizeExtraSmall-16 undefined MuiSvgIcon-fontSizeSmall makeStyles-fontSizeSmall-15"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4.92884133,4.93003344 C8.8339631,1.02504258 15.1660983,1.02307108 19.0736526,4.92562949 C22.9754491,8.83543465 22.9754491,15.1645654 19.0736526,19.0743705 C15.1660983,22.9769289 8.8339631,22.9749574 4.92884133,19.0699666 C1.02371956,15.1649758 1.02371956,8.83502431 4.92884133,4.93003344 Z M15.9222405,8.07512091 C15.5965776,7.74934015 15.0683871,7.7491535 14.7424939,8.07470403 L14.7424939,8.07470403 L12.148636,10.6676672 C12.1095179,10.7068709 12.0564028,10.7289035 12.0010113,10.7289035 C11.9456199,10.7289035 11.8925048,10.7068709 11.8533866,10.6676672 L11.8533866,10.6676672 L9.26036285,8.07470403 C8.93031374,7.77679792 8.42450562,7.79013469 8.11062527,8.10501945 C7.79674491,8.4199042 7.78519409,8.9255819 8.08436944,9.25446058 L8.08436944,9.25446058 L10.6782273,11.8474237 C10.717394,11.8863858 10.7394139,11.9393446 10.7394139,11.9945806 C10.7394139,12.0498167 10.717394,12.1027755 10.6782273,12.1417375 L10.6782273,12.1417375 L8.08436944,14.7338669 C7.92775627,14.8902521 7.83975725,15.1024602 7.83975725,15.3237452 C7.83975725,15.5450302 7.92775627,15.7572384 8.08436944,15.9136235 C8.41363173,16.2311693 8.93527075,16.2311693 9.26453304,15.9136235 L9.26453304,15.9136235 L11.8575568,13.3206603 C11.9394039,13.2399243 12.0709592,13.2399243 12.1528062,13.3206603 L12.1528062,13.3206603 L14.7466641,15.9136235 C15.0771955,16.2077504 15.5799777,16.1926257 15.892219,15.8791628 C16.2044604,15.5657 16.2174537,15.0630316 15.9218234,14.7338669 L15.9218234,14.7338669 L13.3279656,12.1417375 C13.2468448,12.0603907 13.2468448,11.9287706 13.3279656,11.8474237 L13.3279656,11.8474237 L15.9218234,9.25446058 C16.2477166,8.92891003 16.2479033,8.40090169 15.9222405,8.07512091 Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="a-PrivateNotchedOutline-root-1 a-MuiOutlinedInput-notchedOutline"
              style="padding-left:8px"
            >
              <legend
                class="a-PrivateNotchedOutline-legend-2"
                style="width:0.01px"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
        <span
          class="makeStyles-hiddenPlaceholder-39"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test RadioQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="MuiFormGroup-root"
    role="radiogroup"
  >
    <label
      class="MuiFormControlLabel-root makeStyles-root-22"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-27"
            type="radio"
            value="Toyota"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g
              fill-rule="evenodd"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                cx="12"
                cy="12"
                fill="#FFF"
                r="7"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label makeStyles-label-23 MuiTypography-body1"
      >
        Toyota
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root makeStyles-root-22"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-27"
            type="radio"
            value="Mercedes"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g
              fill-rule="evenodd"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                cx="12"
                cy="12"
                fill="#FFF"
                r="7"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label makeStyles-label-23 MuiTypography-body1"
      >
        Mercedes
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root makeStyles-root-22"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-27"
            type="radio"
            value="Ferrari"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g
              fill-rule="evenodd"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                cx="12"
                cy="12"
                fill="#FFF"
                r="7"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label makeStyles-label-23 MuiTypography-body1"
      >
        Ferrari
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root makeStyles-root-22"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-27"
            type="radio"
            value="Ford"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g
              fill-rule="evenodd"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                cx="12"
                cy="12"
                fill="#FFF"
                r="7"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label makeStyles-label-23 MuiTypography-body1"
      >
        Ford
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root makeStyles-root-22"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiRadio-root MuiRadio-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-27"
            type="radio"
            value="BMW"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g
              fill-rule="evenodd"
            >
              <circle
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                cx="12"
                cy="12"
                fill="#FFF"
                r="7"
              />
            </g>
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label makeStyles-label-23 MuiTypography-body1"
      >
        BMW
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test SelectQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="auto-complete-with-add-option"
  >
    <div
      aria-expanded="false"
      class="MuiAutocomplete-root"
      role="combobox"
      style="resize:vertical"
    >
      <div
        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
        >
          <input
            aria-autocomplete="list"
            aria-invalid="false"
            autocapitalize="none"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
            placeholder="Click to answer"
            spellcheck="false"
            type="text"
            value=""
          />
          <div
            class="MuiAutocomplete-endAdornment"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-28 MuiOutlinedInput-notchedOutline"
            style="padding-left:8px"
          >
            <legend
              class="PrivateNotchedOutline-legend-29"
              style="width:0.01px"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test TextQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="custom-rich-text popover"
  >
    <div
      class="custom-rich-text-inner popover-inner"
    >
      <style>
        
.RichEditor-root {
  background: #fff;
  border: 1px solid #ddd;
  font-family: Proxima Nova, Noto Sans, Helvetica, Arial, sans-serif;
  font-size: 14px;
  padding: 5px;
  margin-top: 5px;
  margin-bottom: 5px;
  border-radius: 5px;
}

.RichEditor-editor {
  cursor: text;
  font-size: 16px;
}

.RichEditor-editor .public-DraftEditorPlaceholder-root,
.RichEditor-editor .public-DraftEditor-content {
  padding: 5px;
}

.RichEditor-editor .public-DraftEditorPlaceholder-root {
  position: absolute;
  color: #999999;
}

.RichEditor-editor .public-DraftEditor-content {
  min-height: 100px;
}

.RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
  display: none;
}

.RichEditor-editor .RichEditor-blockquote {
  border-left: 5px solid #eee;
  color: #666;
  font-family: &#x27;Hoefler Text&#x27;, &#x27;Georgia&#x27;, serif;
  font-style: italic;
  margin: 16px 0;
  padding: 10px 20px;
}

.RichEditor-editor .public-DraftStyleDefault-pre {
  background-color: rgba(0, 0, 0, 0.05);
  font-family: &#x27;Inconsolata&#x27;, &#x27;Menlo&#x27;, &#x27;Consolas&#x27;, monospace;
  font-size: 16px;
  padding: 20px;
}

.RichEditor-controls {
  font-family: Proxima Nova, Noto Sans, Helvetica, Arial, sans-serif;
  font-size: 14px;
  margin-bottom: 5px;
  user-select: none;
  display: inline-block;
}

.RichEditor-styleButton {
  color: #999;
  cursor: pointer;
  margin-right: 16px;
  padding: 2px 0;
  display: inline-block;
}

.RichEditor-activeButton {
  color: #5890ff;
}

.DraftEditor-alignLeft {
  text-align: left;
}

.DraftEditor-alignCenter {
  text-align: center;
}

.DraftEditor-alignRight {
  text-align: right;
}

.DraftEditor-alignJustified {
  text-align: justify;
}

h1 {
  font-size: 1.5em;
}

h2 {
  font-size: 1.34em;
}

h3 {
  font-size: 1.17em;
}

h4 {
  font-size: 1em;
}

h5 {
  font-size: 0.83em;
}

h6 {
  font-size: 0.67em;
}

.DraftEditor-indent-1 {
  margin-left: 20px;
}
.DraftEditor-indent-2 {
  margin-left: 40px;
}
.DraftEditor-indent-3 {
  margin-left: 60px;
}
.DraftEditor-indent-4 {
  margin-left: 80px;
}
.DraftEditor-indent-5 {
  margin-left: 100px;
}
.DraftEditor-indent-6 {
  margin-left: 120px;
}
.DraftEditor-indent-7 {
  margin-left: 140px;
}
.DraftEditor-indent-8 {
  margin-left: 160px;
}
.DraftEditor-indent-9 {
  margin-left: 180px;
}
.DraftEditor-indent-10 {
  margin-left: 200px;
}

.style-toolbar {
  display: &#x27;flex&#x27;;
  flex-wrap: &#x27;wrap&#x27;;
  flex: 1;
  position: &#x27;absolute&#x27;;
  background-color: &#x27;white&#x27;;
  border-style: &#x27;solid&#x27;;
  border-width: 1;
  border-color: &#x27;rgba(200, 200, 200, 0.8)&#x27;;
  border-radius: 2;
  z-index: 10;
  margin-top: -37;
  margin-left: 15;
  padding-top: 2;
  padding-right: 5;
  padding-bottom: 0;
  padding-left: 5;
}

.style-button-group {
  flex-direction: row;
  border-radius: 3px;
  border: 1px solid rgba(200, 200, 200, 0.8);
  height: 36px;
  margin: 1px;
}

.style-icon-button {
  flex: 1;
  padding: 3px;
}

.style-icon-button-selected {
  flex: 1;
  border-left: 1px solid rgba(200, 200, 200, 0.8);
  border-right: 1px solid rgba(200, 200, 200, 0.8);
}

.public-DraftStyleDefault-ltr {
  direction: ltr;
}
.public-DraftStyleDefault-rtl {
  direction: rtl;
}
.public-DraftStyleDefault-listLTR {
  direction: ltr;
}
.public-DraftStyleDefault-listRTL {
  direction: rtl;
}
.public-DraftStyleDefault-ol,
.public-DraftStyleDefault-ul {
  margin: 16px 0;
  padding: 0;
}
.public-DraftStyleDefault-depth0.public-DraftStyleDefault-listLTR {
  margin-left: 1.5em;
}
.public-DraftStyleDefault-depth0.public-DraftStyleDefault-listRTL {
  margin-right: 1.5em;
}
.public-DraftStyleDefault-depth1.public-DraftStyleDefault-listLTR {
  margin-left: 3em;
}
.public-DraftStyleDefault-depth1.public-DraftStyleDefault-listRTL {
  margin-right: 3em;
}
.public-DraftStyleDefault-depth2.public-DraftStyleDefault-listLTR {
  margin-left: 4.5em;
}
.public-DraftStyleDefault-depth2.public-DraftStyleDefault-listRTL {
  margin-right: 4.5em;
}
.public-DraftStyleDefault-depth3.public-DraftStyleDefault-listLTR {
  margin-left: 6em;
}
.public-DraftStyleDefault-depth3.public-DraftStyleDefault-listRTL {
  margin-right: 6em;
}
.public-DraftStyleDefault-depth4.public-DraftStyleDefault-listLTR {
  margin-left: 7.5em;
}
.public-DraftStyleDefault-depth4.public-DraftStyleDefault-listRTL {
  margin-right: 7.5em;
}
.public-DraftStyleDefault-unorderedListItem {
  list-style-type: square;
  position: relative;
}
.public-DraftStyleDefault-unorderedListItem.public-DraftStyleDefault-depth0 {
  list-style-type: disc;
}
.public-DraftStyleDefault-unorderedListItem.public-DraftStyleDefault-depth1 {
  list-style-type: circle;
}
.public-DraftStyleDefault-orderedListItem {
  list-style-type: none;
  position: relative;
}
.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-listLTR:before {
  left: -36px;
  position: absolute;
  text-align: right;
  width: 30px;
}
.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-listRTL:before {
  position: absolute;
  right: -36px;
  text-align: left;
  width: 30px;
}
.public-DraftStyleDefault-orderedListItem:before {
  content: counter(ol0) &#x27;. &#x27;;
  counter-increment: ol0;
}
.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth1:before {
  content: counter(ol1) &#x27;. &#x27;;
  counter-increment: ol1;
}
.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth2:before {
  content: counter(ol2) &#x27;. &#x27;;
  counter-increment: ol2;
}
.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth3:before {
  content: counter(ol3) &#x27;. &#x27;;
  counter-increment: ol3;
}
.public-DraftStyleDefault-orderedListItem.public-DraftStyleDefault-depth4:before {
  content: counter(ol4) &#x27;. &#x27;;
  counter-increment: ol4;
}
.public-DraftStyleDefault-depth0.public-DraftStyleDefault-reset {
  counter-reset: ol0;
}
.public-DraftStyleDefault-depth1.public-DraftStyleDefault-reset {
  counter-reset: ol1;
}
.public-DraftStyleDefault-depth2.public-DraftStyleDefault-reset {
  counter-reset: ol2;
}
.public-DraftStyleDefault-depth3.public-DraftStyleDefault-reset {
  counter-reset: ol3;
}
.public-DraftStyleDefault-depth4.public-DraftStyleDefault-reset {
  counter-reset: ol4;
}

.style-button-group {
  margin-right: 3px;
  margin-bottom: 3px;
  height: 38px;
}

.style-button-group .icon-button {
  cursor: pointer;
  flex: 1;
  font-size: 19.22px;
  padding: 9.4px;
  border-radius: 3px;
}

.style-button-group .text.icon-button {
  display: inline-flex;
  height: 36px;
  width: 38px;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  font-size: 16pt;
  font-weight: 300;
  font-family: sans-serif;
  vertical-align: top;
  padding: 0;
  padding-top: 2px;
}

.style-button-group .icon-button.active {
  background: #0768fd;
  color: #fff;
  border-radius: 0;
}

.style-button-group .icon-button.active:first-child {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.style-button-group .icon-button.active:last-child {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.rti-select {
  margin: 0 !important;
  margin-bottom: 3px !important;
  margin-right: 3px !important;
}

.rti-select &gt; div {
  margin-top: 0 !important;
}

      </style>
      <div
        class=""
      >
        <div
          class="RichTextEditor-popoverControllersRoot-57"
        >
          <div
            class="RichTextEditor-controllerHeader-58"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root RichTextEditor-label-52 makeStyles-label-60 MuiInputLabel-animated"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall makeStyles-fontSizeSmall-64"
              focusable="false"
              style="color:grey;cursor:pointer"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,22 C8.44771525,22 8,21.5522847 8,21 C8,20.4477153 8.44771525,20 9,20 L11,20 L11,4 L5,4 L5,6 C5,6.55228475 4.55228475,7 4,7 C3.44771525,7 3,6.55228475 3,6 L3,3 C3,2.44771525 3.44771525,2 4,2 L20,2 L20,2 C20.5522847,2 21,2.44771525 21,3 L21,6 C21,6.55228475 20.5522847,7 20,7 C19.4477153,7 19,6.55228475 19,6 L19,4 L13,4 L13,20 L15,20 C15.5522847,20 16,20.4477153 16,21 C16,21.5522847 15.5522847,22 15,22 L9,22 Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="RichEditor-editor RichTextEditor-root-51 RichTextEditor-withHover-53"
        >
          <div
            class="DraftEditor-root"
          >
            <div
              class="DraftEditor-editorContainer"
            >
              <div
                aria-describedby="placeholder-4l9fc"
                class="notranslate public-DraftEditor-content"
                contenteditable="true"
                role="textbox"
                spellcheck="false"
                style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
                tabindex="0"
              >
                <div
                  data-contents="true"
                >
                  <div
                    data-block="true"
                    data-editor="4l9fc"
                    data-offset-key="9kknp-0-0"
                  >
                    <div
                      class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="9kknp-0-0"
                    >
                      <span
                        data-offset-key="9kknp-0-0"
                      >
                        <br
                          data-text="true"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Snapshot Test Approval Input Components Test YesNoQuestion 1`] = `
LoadedCheerio {
  "0": <div
    class="dd-input-wrapper"
  >
    <div
      class="dd-wrapper"
    >
      <div
        class="dd-header"
        role="presentation"
        tabindex="0"
      >
        <div
          class="dd-header-placeholder"
        />
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
